css: fix spacing for keybase login

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -46,20 +46,22 @@
     flex: 1;
   }
 
+  .keybase-username {
+    padding-bottom: 0.25em;
+  }
+
+  .keybase-username, .keybase-password {
+    vertical-align: middle;
+  }
+
   .keybase-sigchain {
     .btn-primary {
       color: @text-color-selected;
       background-color: @color-info;
     }
 
-    .bg-green { background-color: #dff0d8 }
-
-    .keybase-username {
-      padding-bottom: 0.25em;
-    }
-
-    .keybase-username, .keybase-password {
-      vertical-align: middle;
+    .bg-green {
+      background-color: #dff0d8
     }
 
     .sigchain-table {
